hphp/hack/test/typecheck/idx3_2.php.exp
File "idx3_2.php", line 10, characters 10-11:
Invalid return type (Typing[4110])
File "idx3_2.php", line 7, characters 15-20:
Expected string
File "idx3_2.php", line 3, characters 27-29:
But got int
File "collections/Map.hhi", line 59, characters 64-65:
  via this generic Tv
File "collections/interfaces.hhi", line 1136, characters 63-64:
  via this generic Tv
File "collections/interfaces.hhi", line 866, characters 56-57:
  via this generic Tv
